--- a/composer.json
+++ b/composer.json
@@ -40,5 +40,14 @@
 			"typo3/class-alias-loader": true,
 			"typo3/cms-composer-installers": true
 		}
+	},
+	"scripts": {
+		"post-autoload-dump": [
+			"@prepare-extension-test-structure",
+			"mkdir --parents .Build/logs/"
+		],
+		"prepare-extension-test-structure": [
+			"Nimut\\TestingFramework\\Composer\\ExtensionTestEnvironment::prepare"
+		]
 	}
 }
