--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,16 @@
 		"php": "^7.4 || ^8.0 || ^8.1",
 		"typo3/cms-core": "^9.5 || ^10.4 || ^11.5",
 		"typo3/cms-frontend": "^9.5.15 || ^10.4 || ^11.5",
-		"typo3/cms-extbase": "^9.5 || ^10.4 || ^11.5",
-		"sentry/sdk": "^3.1"
+		"typo3/cms-extbase": "^9.5 || ^10.4 || ^11.5"
 	},
 	"require-dev": {
 		"ext-sqlite3": "*",
 		"nimut/testing-framework": "^6.0",
 		"nimut/phpunit-merger": "^1.1",
 		"phpunit/phpcov": "^8.2"
+	},
+	"suggest": {
+		"netlogix/nxsentry": "Send errors and exceptions to sentry"
 	},
 	"autoload": {
 		"psr-4": {
