--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,9 @@
 	"license": "MIT",
 	"require": {
 		"php": "^7.4 || ^8.0 || ^8.1",
-		"typo3/cms-core": "^9.5 || ^10.4 || ^11.5",
-		"typo3/cms-frontend": "^9.5.15 || ^10.4 || ^11.5",
-		"typo3/cms-extbase": "^9.5 || ^10.4 || ^11.5"
+		"typo3/cms-core": "^10.4 || ^11.5",
+		"typo3/cms-frontend": "^10.4 || ^11.5",
+		"typo3/cms-extbase": "^10.4 || ^11.5"
 	},
 	"require-dev": {
 		"ext-sqlite3": "*",
