--- a/composer.json
+++ b/composer.json
@@ -4,16 +4,15 @@
 	"type": "typo3-cms-extension",
 	"license": "MIT",
 	"require": {
-		"php": "^7.4 || ^8.0 || ^8.1",
-		"typo3/cms-core": "^10.4 || ^11.5",
-		"typo3/cms-frontend": "^10.4 || ^11.5",
-		"typo3/cms-extbase": "^10.4 || ^11.5"
+		"php": "^8.1",
+		"typo3/cms-core": "^12.4",
+		"typo3/cms-frontend": "^12.4",
+		"typo3/cms-extbase": "^12.4"
 	},
 	"require-dev": {
 		"ext-sqlite3": "*",
-		"nimut/testing-framework": "^6.0",
-		"nimut/phpunit-merger": "^1.1",
-		"phpunit/phpcov": "^8.2"
+		"typo3/testing-framework": "^8.0",
+		"phpunit/phpcov": "^9.0"
 	},
 	"suggest": {
 		"netlogix/nxsentry": "Send errors and exceptions to sentry"
@@ -46,10 +45,10 @@
 	"scripts": {
 		"post-autoload-dump": [
 			"@prepare-extension-test-structure",
-			"mkdir --parents .Build/logs/"
+			"mkdir -p .Build/logs/"
 		],
 		"prepare-extension-test-structure": [
-			"Nimut\\TestingFramework\\Composer\\ExtensionTestEnvironment::prepare"
+			"TYPO3\\TestingFramework\\Composer\\ExtensionTestEnvironment::prepare"
 		]
 	}
 }
