fix: Adjust web-dir to TYPO3 v12 best practices

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
 	"extra": {
 		"typo3/cms": {
 			"extension-key": "nxerrorhandler",
-			"web-dir": ".Build/Web",
+			"web-dir": ".Build/public",
 			"cms-package-dir": "{$vendor-dir}/typo3/cms"
 		}
 	},
