--- a/.github/workflows/apply-coding-standard.yml
+++ b/.github/workflows/apply-coding-standard.yml
@@ -46,9 +46,9 @@ jobs:
       - name: 'Create pull-request'
         uses: peter-evans/create-pull-request@v5.0.2
         with:
-          token: ${{ secrets.GH_AUTOMATION_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: "[automated] Apply Coding Standard"
-          base: 'develop'
+          base: 'main'
           branch: 'automated-apply-coding-standards'
           title: '[automated] Apply Coding Standard'
           labels: 'automated'
