--- a/.github/workflows/apply-coding-standard.yml
+++ b/.github/workflows/apply-coding-standard.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   php-coding-standard:
     name: 'Apply PHP Coding Standard'
@@ -16,7 +20,7 @@ jobs:
       - name: 'Setup PHP'
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.1'
+          php-version-file: '.phprc'
           tools: composer
 
       - name: 'Get Composer Cache Directory'
@@ -37,25 +41,35 @@ jobs:
 
       - name: 'Rector PHP Code'
         shell: bash
-        run: composer rector-fix
+        run: composer rector:fix
 
-      - name: 'Lint PHP Code'
+      - name: 'Normalize Composer files'
         shell: bash
-        run: composer lint-fix
+        run: composer composer:normalize:fix
+
+      - name: 'PHP syntax checker'
+        shell: bash
+        run: composer php:lint
+
+      - name: 'Prettier'
+        shell: bash
+        continue-on-error: true
+        run: ./prettier.sh --write
+
+      - name: 'Run PHPUnit unit tests'
+        shell: bash
+        run: composer test:unit
+
+      - name: 'Run PHPUnit functional tests'
+        shell: bash
+        run: composer test:functional
 
       - name: 'Create pull-request'
-        uses: peter-evans/create-pull-request@v6.0.2
+        uses: peter-evans/create-pull-request@v7
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: "[automated] Apply Coding Standard"
-          base: 'main'
+          commit-message: 'refactor: Apply Coding Standard'
           branch: 'automated-apply-coding-standards'
           title: '[automated] Apply Coding Standard'
           labels: 'automated'
           delete-branch: true
-
-      - name: 'Enable Pull Request Merge when ready'
-        if: steps.cpr.outputs.pull-request-operation == 'created'
-        run: gh pr merge --auto "${{ steps.cpr.outputs.pull-request-number }}"
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
